Going back to the YAML config